--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -181,8 +182,11 @@
       </section>
     </main>
     <footer>
-      <img src="images/logo.jpg" alt="">
-      <h2>© GHANA MUSIC AWARDS '23. Some Rights Reserved</h2>
+      <div class="footer-img">
+
+        <img src="images/logo.jpg" alt="">
+      </div>
+      <h2>© GHANA MUSIC AWARDS '23. <br/> Some Rights Reserved</h2>
     </footer>
     <script src="script.js"></script>
   </body>
