Add the desktop view

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="navigation">
-        <!-- <div class="login">
+        <div class="login">
           <ul class="login-item">
             <li class="login-social">
               <img
@@ -32,7 +32,7 @@
             <li class="login-social">English</li>
             <li class="login-social">Logout</li>
           </ul>
-        </div> -->
+        </div>
 
         <div class="hamburger">
           <span class="bar"></span>
@@ -40,15 +40,9 @@
           <span class="bar"></span>
         </div>
 
-        <!-- <div class="nav-bar">
-          <div class="logo">
-            <img
-              src="images/logo.jpg"
-              alt=""
-              class="header-logo"
-              href="#homepage"
-            />
-          </div>
+        <div class="nav-bar">
+          <a href="index.html">
+            <img src="images/logo.jpg" alt="" class="header-logo"></a>
           <div class="nav-links">
             <ul class="nav-menu">
               <li class="nav-item">
@@ -72,7 +66,7 @@
           <div class="campaign">
             <p class="gm-campaign">GM Campaign</p>
           </div>
-        </div> -->
+        </div>
       </div>
     </header>
 
@@ -138,7 +132,7 @@
       </ul>
     </section>
 
-    <section class="partners">
+    <section class="partners-1">
       <h2>Partners</h2>
     <div class="underline"></div>
     <ul class="partner-list">
@@ -150,12 +144,11 @@
     </ul>
     </section>
   </main>
-  <footer>
+  <footer class="footer">
     <div class="footer-img">
-
       <img src="images/logo.jpg" alt="">
     </div>
-    <h2>© GHANA MUSIC AWARDS '23. <br/> Some Rights Reserved</h2>
+    <h2>© GHANA MOVIE AWARDS '23. <br/> Some Rights Reserved</h2>
   </footer>
   </body>
 </html>
