--- a/about.html
+++ b/about.html
@@ -110,17 +110,18 @@
         at the National Theatre and Kempinski Hotel
       </p>
       <ul class="card-events">
-        <li>
+        <li class="card-image-wrapper">
           <div class="card-image">
             <img src="images/past event-1.png" alt="past-events" />
           </div>
-          <div class="card-info">
+           <div class="card-info">
             <h3>2018</h3>
             <p>Kempinski Hotel, Gold Coast City, Accra</p>
           </div>
+         
         </li>
 
-        <li>
+        <li class="card-image-wrapper">
           <div class="card-image">
             <img src="images/past event-2.png" alt="past-events" />
           </div>
