Modify js functionality

--- a/index.html
+++ b/index.html
@@ -34,41 +34,41 @@
           </ul>
         </div>
 
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-
-        <div class="nav-bar">
+        <nav class="nav-bar">
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
           <a href="index.html">
             <img src="images/logo.jpg" alt="" class="header-logo" />
           </a>
 
-          <div class="nav-links">
-            <ul class="nav-menu">
-              <li class="nav-item">
-                <a href="about.html" class="nav-link">About</a>
-              </li>
-              <li class="nav-item">
-                <a href="#Program" class="nav-link">Program</a>
-              </li>
-              <li class="nav-item">
-                <a href="#Join" class="nav-link">Join</a>
-              </li>
-              <li class="nav-item">
-                <a href="#Sponsor" class="nav-link">Sponsor</a>
-              </li>
-              <li class="nav-item">
-                <a href="#News" class="nav-link">News</a>
-              </li>
-            </ul>
-          </div>
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#Program" class="nav-link">Program</a>
+            </li>
+            <li class="nav-item">
+              <a href="#Join" class="nav-link">Join</a>
+            </li>
+            <li class="nav-item">
+              <a href="#Sponsor" class="nav-link">Sponsor</a>
+            </li>
+            <li class="nav-item">
+              <a href="#News" class="nav-link">News</a>
+            </li>
+          </ul>
 
           <div class="campaign">
             <p class="gm-campaign">GM Campaign</p>
           </div>
-        </div>
+        </nav>
       </div>
     </header>
 
@@ -79,11 +79,7 @@
           Maclaine"
         </p>
         <h1 class="about-intro">
-          <strong>
-            GHANA <br />
-            MOVIE <br />
-            AWARDS '23
-          </strong>
+          <strong> GHANA MOVIE AWARDS '23 </strong>
         </h1>
         <p class="about">
           Ghana Movie Awards is an annual film award to recognise excellence in
@@ -169,14 +165,11 @@
       <section class="featured-presenters">
         <h2>Featured Presenters</h2>
         <div class="underline"></div>
-        <div class="presenterSection"></div>
-
-        <!-- <button class="more">
-            <a href="#" target="_blank"
-              ><span>MORE</span
-              ><img src="images/down-arrow.png" alt="down-arrow"
-            /></a></button> -->
-
+        <div class="presenter-container">
+          <div class="presenterSection">
+            <!-- Created dynamically with JavaScript -->
+          </div>
+        </div>
         <div id="more">See More</div>
       </section>
 
