--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -44,7 +45,11 @@
           <a href="index.html">
             <img src="images/logo.jpg" alt="" class="header-logo"></a>
           <div class="nav-links">
+            <div class="nav-menu-wrapper">
             <ul class="nav-menu">
+              <li class="nav-item">
+                <a href="index.html" class="nav-link">Home</a>
+              </li>
               <li class="nav-item">
                 <a href="about.html" class="nav-link">About</a>
               </li>
@@ -61,6 +66,7 @@
                 <a href="#News" class="nav-link">News</a>
               </li>
             </ul>
+            </div>
           </div>
 
           <div class="campaign">
@@ -70,11 +76,11 @@
       </div>
     </header>
 
-    <section class="about">
+    <section class="about-1">
       <p>"Bringing scripts to life"</p>
       <h1 class="ceremony">
-        GHANA <br />
-        MOVIE <br />
+        GHANA 
+        MOVIE 
         AWARDS '23
       </h1>
       <article class="history">
@@ -99,7 +105,7 @@
         The logo Ghana Movie Award was decided through the logo competition from
         8 September to 7 November.
       </p>
-      <div class="image-logo"><img src="images/logo.jpg" alt="GMA logo" /></div>
+      <div class="image-logo"><img src="images/logo.jpg" alt="GMA logo" class="imgLogo"/></div>
     </section>
 
     <section class="past-events">
@@ -112,7 +118,7 @@
       <ul class="card-events">
         <li class="card-image-wrapper">
           <div class="card-image">
-            <img src="images/past event-1.png" alt="past-events" />
+            <img src="images/past event-1.png" alt="past-events" class="pImg"/>
           </div>
            <div class="card-info">
             <h3>2018</h3>
